[package]
name = "tree-sitter-apex"
description = "apex grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "apex", "unofficial"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/ziemniakoss/tree-sitter-apex"
edition = "2018"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.0"

[build-dependencies]
cc = "1.0"
